crates/aranya-policy-compiler/tests/data/global_let/duplicate_in_action_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
1 | let x = 10
  |     - previous defintion here
2 | action foo() {
3 |     let x = saturating_add(x, 15)
  |         ^ re-defined here
